# exercises

./: .gitignore
Week1/: epsilon  epsilon.cpp
Week2/: simpson  simpson.cpp
Week3/array1/: array1  array1.cpp
Week3/array2/: array2  array2.cpp
Week3/array3/: array3  array3.cpp
Week3/simpson/: main  main.cpp  make.mk  simpson.cpp  simpson.hpp
Week4/cache/: build.mk  cache.cpp  output-1.txt  output-2.txt  output-3.txt  output-4.txt  output-5.txt  output-6.txt  output-7.txt  output-8.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  plot-4.py  plot-7.py  var-1.txt  var-1.txt.save  var-2.txt  var-3.txt  var-4.txt  var-5.txt  var-6.txt  var-7.txt  var-8.txt
Week4/input/: inputtovector.hpp
Week4/simpson/: Makefile  benchmark  benchmark.cpp  build.mk  input.txt  main.cpp  output.txt  output2.txt  simpsonsquare.cpp  simpsonsquare.hpp
Week4/timer/: dg_timer.hpp
cqp/: numerov.py
cqp/week01/numerov/: numerov.py
cqp/week02/numerov/: numerov.py
cqp/week04/pimc/: Makefile  main.py  pimc.cpp  test.cpp
cqp/week05/: hw05.nb  hw05_bosehubbard.nb  hw05_spins.nb
cqp/week08/: ex01.py
cqp/week10/Ising/: CMakeLists.txt
cqp/week10/Ising/examples/: CMakeLists.txt  exercise1.cpp
cqp/week10/Ising/src/: beta.hpp  global.hpp  types.hpp
cqp/week10/Ising/src/addon/: accum.hpp  debug.hpp  performance.hpp  ppm_picture.hpp
cqp/week10/Ising/src/grid/: beta_grid.hpp  grid.hpp
cqp/week10/Ising/src/matrix/: beta_matrix.hpp  matrix.hpp
cqp/week10/Ising/src/rng/: beta_rng.hpp  custom_mt_rng.hpp
cqp/week10/Ising/src/sim/: beta_sim.hpp  global.hpp  sim.hpp
cqp/week13/: Deutsch_Josza.cpp
fastcode/: midterm.txt
fastcode/hw01/: feedback.txt
fastcode/hw01/latex/: homework.tex
fastcode/hw02/: feedback.txt
fastcode/hw02/latex/: homework.tex
fastcode/hw03/: feedback.txt
fastcode/hw03/ex01/: ex01.nb
fastcode/hw03/latex/: homework.tex
fastcode/hw05/: feedback.txt  nbcalc.nb
fastcode/hw05/latex/: homework.tex
fastcode/hw05/roofline/: plot.py
hpcse/week01/riemann/: riemann_serial.cpp
hpcse/week02/test_barrier/: test.cpp
hpcse/week04/mc/: omp.cpp  plot_count.py  plot_res.py
hpcse/week05/examples/: equilibrate.cpp  hist.py  plot2.py  timing.cpp
hpcse/week05/src/: omp_version.hpp  serial_v2.hpp
hpcse/week10/code/: PSE_MPI.cpp
progtech/week04/cache/: arrayloop.hpp  output-5.txt  plot-1.py  plot-5.py  plot-6.py  plot-8.py
progtech/week04/simpson/: output.txt  plot.py  simpsonsquare.cpp
progtech/week05/epsilon/: main.cpp
progtech/week09/simpson/: CMakeLists.txt  CMakeLists.txt~
progtech/week09/simpson/src/lib/: simpson.hpp
progtech/week10/monte_carlo/: monte_carlo.cpp  seeds.txt
progtech/week11/penna/: CMakeLists.txt  CMakeLists.txt~
progtech/week13/: CMakeLists.txt
python_tools/: plot_setup.py
week01/riemann/: riemann_threads.cpp
week02/barrier/: barrier.hpp
week02/diffusion/: compare.cpp  diffusion_serial.cpp  diffusion_serial.hpp  diffusion_threaded_v1.cpp  diffusion_threaded_v1.hpp  read_res.py  serial_test.cpp
week02/diffusion/src/: common.hpp  threaded_v1.hpp  threaded_v2.hpp
week02/diffusion/tests/: read_res.py  timing.cpp  timing_t2.cpp
week03/array2/: array2.cpp
week03/diffusion/src/: diffusion_omp.hpp
week03/diffusion/test/: test.cpp
week03/simpson/: main.cpp
week04/cache/: arrayloop.cpp  output-6.txt  plot-2.py  plot-3.py
week04/mc/: plot.py  serial.cpp  serial_counts.cpp
week04/simpson/: benchmark.cpp  simpsonsquare.hpp
week05/examples/: equilibrate.cpp  measure.cpp  plot.py  timing.cpp
week05/simpson/src/: main.cpp
week05/src/: common.hpp  omp.hpp  omp_version.hpp  serial.hpp  serial_v2.hpp
week06/ex2/: CMakeLists.txt
week06/ex2/src/benchmark/: main.cpp
week06/ex2/src/libraries/timer/: timer.hpp
week07/diffusion/src/: diffusion_mpi.hpp  mpi_helpers.hpp
week07/diffusion/test/: read_res.py  read_times.py  test2.cpp  test_barrier.cpp  test_helpers.cpp  test_mpi.cpp  timing.cpp  timing_mpi.cpp  timings.sh
week08/vortex/res/: strong_1.txt  strong_12.txt  strong_16.txt  strong_2.txt  strong_20.txt  strong_24.txt  strong_28.txt  strong_32.txt  strong_36.txt  strong_4.txt  strong_40.txt  strong_6.txt  strong_8.txt  weak_1.txt  weak_12.txt  weak_16.txt  weak_2.txt  weak_20.txt  weak_24.txt  weak_28.txt  weak_32.txt  weak_36.txt  weak_4.txt  weak_40.txt  weak_48.txt  weak_6.txt  weak_8.txt
week08/vortex/src/: common.hpp  vortex_mpi.hpp  vortex_serial.hpp
week08/vortex/test/: read_res.py  read_timings.py  run.py  run.sh  test_mpi.cpp  test_s.cpp  timing.cpp
week08/z2/src/: z2.cpp
week09/penna/simulation/: plot.py
week10/benchmark/: CMakeLists.txt
week10/benchmark/main/: benchmark.cpp
week10/benchmark/src/lib/timer/: dg_timer.hpp
week10/monte_carlo/: monte_carlo.cpp
week11/code/HPCSE12_ParallelSum/: mpi.cpp  threads.cpp
week11/penna/: CMakeLists.txt
week11/penna/simulation/: simulation.cpp
week11/penna/src/lib/: animal.cpp  animal.hpp  fishing.hpp  population.hpp
week11/simpson/main/: benchmark.py  function_object.cpp  function_pointer.cpp  hard_coded.cpp  virtual.cpp
week12/matrix/: CMakeLists.txt
week12/matrix/main/: benchmark.py  blocking.cpp  library.cpp  main.cpp  meta.cpp  simple.cpp
week13/src/lib/: algorithmic_derivation.hpp
week5/epsilon/: epsilon.hpp
week5/simpson/: CMakeLists.txt
week5/simpson/src/: main.cpp  simpson.cpp
week6/: CMakeLists.txt
week6/benchmark/src/: main.cpp  random.hpp
week6/libraries/: timer.hpp
week6/penna/: penna.hpp
week7/penna/: CMakeLists.txt  animal.cpp  animal.hpp  animal_test.cpp  genome.cpp  genome.hpp  genome_test.cpp
week7/penna/src/lib/: animal.cpp  animal.hpp  genome.cpp  genome.hpp
week7/penna/src/testers/: animal_test.cpp  genome_test.cpp
week8/penna/: CMakeLists.txt  CMakeLists.txt.save
week8/penna/simulation/: plot.py  simulation.cpp
week8/penna/src/lib/: animal.cpp  animal.hpp  genome.cpp  population.cpp  population.hpp
week8/penna/src/simulation/: simulation.cpp
week8/z2/: CMakeLists.txt
week9/penna/: CMakeLists.txt
(+158 files in other folders)
